--- a/pom.xml
+++ b/pom.xml
@@ -62,21 +62,21 @@
     </dependency>
 
     <!-- Databases - Uses H2 by default -->
-    <dependency>
+<!--     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <scope>runtime</scope>
-    </dependency>
+    </dependency> -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <scope>runtime</scope>
     </dependency>
-    <dependency>
+<!--     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
-    </dependency>
+    </dependency> -->
 
     <!-- caching -->
     <dependency>
