--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,16 @@
-# database init, supports mysql too
-database=h2
-spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
-spring.sql.init.data-locations=classpath*:db/${database}/data.sql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://${DB_HOSTNAME:localhost}:${DB_PORT:3306}/${DB_NAME:webappdb}?useSSL=false
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=20
+spring.datasource.tomcat.min-idle=15
+spring.datasource.initialization-mode=always
+spring.datasource.continue-on-error=true
 
-# Web
-spring.thymeleaf.mode=HTML
-
-# JPA
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.open-in-view=true
-
-# Internationalization
-spring.messages.basename=messages/messages
-
-# Actuator
-management.endpoints.web.exposure.include=*
-
-# Logging
-logging.level.org.springframework=INFO
-# logging.level.org.springframework.web=DEBUG
-# logging.level.org.springframework.context.annotation=TRACE
-
-# Maximum time static resources should be cached
-spring.web.resources.cache.cachecontrol.max-age=12h
+# JPA Settings
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.format_sql = true
